[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/LevelViewport.gd" type="Script" id=1]
[ext_resource path="res://levels/level01/Level01.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/UIScaler.gd" type="Script" id=3]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/CollectedLabel.gd" type="Script" id=5]
[ext_resource path="res://entities/liht/body.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/Menu.gd" type="Script" id=7]
[ext_resource path="res://ui/backgrounds/advisertmen2t.jpeg" type="Texture" id=8]
[ext_resource path="res://ui/OptionsPage/OptionsPage.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/backgrounds/options.jpeg" type="Texture" id=10]

[sub_resource type="Animation" id=1]

resource_name = "Nowa animacja"
length = 1.0
loop = false
step = 0.1

[sub_resource type="ButtonGroup" id=2]

resource_local_to_scene = true

[node name="GameUI" type="Control" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Hint", "Mouse", "Pause", "Size Flags" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = "Nowa animacja"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Nowa animacja" = SubResource( 1 )
blend_times = [  ]

[node name="LevelViewport" type="ViewportContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 1030.0
margin_bottom = 604.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = true
stretch_shrink = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="Viewport" type="Viewport" parent="LevelViewport" index="0"]

arvr = false
size = Vector2( 1028, 604 )
own_world = true
world = null
transparent_bg = false
msaa = 0
hdr = false
disable_3d = true
usage = 0
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Rendering" ]

[node name="Level01" parent="LevelViewport/Viewport" index="0" instance=ExtResource( 2 )]

pause_mode = 1
_sections_unfolded = [ "Material", "Pause" ]

[node name="UIScaler" type="Node2D" parent="." index="2"]

script = ExtResource( 3 )

[node name="CollectedLabel" type="Label" parent="UIScaler" index="0"]

pause_mode = 2
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 765.0
margin_top = 24.0
margin_right = 857.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "00/00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 5 )
_sections_unfolded = [ "Pause", "Visibility", "custom_fonts" ]
__meta__ = {
"_edit_group_": true
}

[node name="body" parent="UIScaler/CollectedLabel" index="0" instance=ExtResource( 6 )]

position = Vector2( 76.7281, 12.44 )
z_index = 10
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="Timer" type="Timer" parent="UIScaler/CollectedLabel" index="1"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = true

[node name="Menu" type="Panel" parent="UIScaler" index="1"]

self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_right = 961.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 7 )
_sections_unfolded = [ "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="UIScaler/Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = -4.0
margin_right = 1030.0
margin_bottom = 594.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 0

[node name="OptionsPage" parent="UIScaler/Menu" index="1" instance=ExtResource( 9 )]

visible = false
margin_left = 25.0
margin_top = -4.0
margin_right = -143.0
margin_bottom = -2.0

[node name="HBoxContainer" type="VBoxContainer" parent="UIScaler/Menu" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 37.0
margin_right = 139.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="New Game" type="Button" parent="UIScaler/Menu/HBoxContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 144.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Return" type="Button" parent="UIScaler/Menu/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Load" type="Button" parent="UIScaler/Menu/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 133.0
margin_right = 123.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
text = "Load"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Options" type="Button" parent="UIScaler/Menu/HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 266.0
margin_right = 123.0
margin_bottom = 395.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
text = "Options"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Controls" type="Button" parent="UIScaler/Menu/HBoxContainer" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 318.0
margin_right = 123.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
text = "Controls"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Quit" type="Button" parent="UIScaler/Menu/HBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 399.0
margin_right = 123.0
margin_bottom = 530.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
text = "Quit"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="QuitPage" type="Panel" parent="UIScaler/Menu" index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 568.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TextureRect" type="TextureRect" parent="UIScaler/Menu/QuitPage" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 879.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
expand = true
stretch_mode = 0

[node name="Label" type="Label" parent="UIScaler/Menu/QuitPage" index="1"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -97.0
margin_right = 2.0
margin_bottom = -42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Do you realy want to quit?
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="UIScaler/Menu/QuitPage" index="2"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 266.0
margin_top = -325.0
margin_right = -77.0
margin_bottom = -275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Yes" type="Button" parent="UIScaler/Menu/QuitPage/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 57.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="No" type="Button" parent="UIScaler/Menu/QuitPage/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 61.0
margin_right = 114.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Return" to="UIScaler/Menu" method="_on_Return_pressed"]

[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Options" to="UIScaler/Menu" method="_on_Options_pressed"]

[connection signal="pressed" from="UIScaler/Menu/HBoxContainer/Quit" to="UIScaler/Menu" method="_on_Quit_pressed"]

[connection signal="pressed" from="UIScaler/Menu/QuitPage/HBoxContainer/Yes" to="UIScaler/Menu" method="_on_Yes_pressed"]

[connection signal="pressed" from="UIScaler/Menu/QuitPage/HBoxContainer/No" to="UIScaler/Menu" method="_on_Return_pressed"]


